Web based User Interface
User interface providing view on recent 10 entries via gallery slider. Logging table showing entire entries. Graphical line chart, showing the edibility class per entry.
TODOS: 
1 Testing with productive data.
2 The edibility classes data could be filtered by day.
3 Maybe adding an input dialog for further grocery data.
4 A more or less dummy health recommendation dialog.

--- a/smartfridge/web_interface/css/kickstart-forms.css
+++ b/smartfridge/web_interface/css/kickstart-forms.css
@@ -284,6 +284,7 @@ clear:both;
 	.notice.warning{}/*default*/
 	.notice.error{border:1px solid red;background:pink;color:red;}
 	.notice.success{border:1px solid green;background:lightgreen;color:green;}
+	.notice.neutral{border:1px solid black;background:#f4f4f4;color:black;}
 	.notice i[class*='fa-']{position:absolute;top:50%;left:0.8em;margin-top:-0.6em;}
 	.notice a[class*='fa-remove'],
 	.notice a[class*='fa-remove']:active,
